add_subdirectory (comm_static_library)
add_subdirectory (epoxy_io_service)
add_subdirectory (error)
add_subdirectory (event)
add_subdirectory (generic)
add_subdirectory (layer)
add_subdirectory (logging)
add_subdirectory (passthrough)
add_subdirectory (pingpong)
add_subdirectory (timeout_callbacks)
add_subdirectory (transport)
add_subdirectory (uncaught_exception)
add_subdirectory (void)
