add_subdirectory (access_control)
add_subdirectory (attributes)
add_subdirectory (bf)
add_subdirectory (capped_allocator)
add_subdirectory (compile_time_schema)
add_subdirectory (container_of_pointers)
if (MSVC)
    add_subdirectory (dll)
endif()
add_subdirectory (enumerations)
add_subdirectory (generic_tree)
add_subdirectory (generics)
add_subdirectory (import)
add_subdirectory (inheritance)
add_subdirectory (marshaling)
add_subdirectory (merge)
add_subdirectory (modifying_transform)
add_subdirectory (move_semantics)
add_subdirectory (multiprecision)
add_subdirectory (nothing_default)
add_subdirectory (output_stream_allocator)
add_subdirectory (polymorphic_container)
add_subdirectory (polymorphic_container_visitor)
add_subdirectory (protocol_transcoding)
add_subdirectory (protocol_versions)
add_subdirectory (record_streaming)
add_subdirectory (runtime_binding)
add_subdirectory (runtime_schema)
add_subdirectory (schema_view)
add_subdirectory (scoped_allocator)
add_subdirectory (serialization)
add_subdirectory (simple_json)
add_subdirectory (static_array)
add_subdirectory (static_library)
add_subdirectory (string_ref)
if (Boost_DATE_TIME_FOUND)
    add_subdirectory (time_alias)
endif()
add_subdirectory (trace)
add_subdirectory (transform)
add_subdirectory (variadic)
